# homework-7

./: README.md  alembic.ini  argparser.py  commands.py  connection.py  main.py  models.py  my_select.py  pyproject.toml  queries.py  requirements.txt  seed.py  tools.py
alembic/versions/: 65ffaa45c968_add_middle_name_to_student_and_teacher.py  8a3ec31ad447_init.py
